{
    "name": "InputControls",
    "maps": [
        {
            "name": "Player",
            "id": "41b15f8d-b7d9-4f72-84bf-e02b405ff5af",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "142a3f5c-c458-4e46-ae14-8cf83be3f893",
                    "expectedControlType": "Vector2",
                    "processors": "StickDeadzone",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "1fe6b96d-2347-46e5-9571-039c352d6f2c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Press to Run",
                    "type": "Button",
                    "id": "83d6b4cc-952d-475e-ac8b-f9cbf9e0d012",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Hold to Run",
                    "type": "Button",
                    "id": "c99baa36-9070-4f13-8875-48bc19d28cfa",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Camera",
                    "type": "Value",
                    "id": "671a6f4d-9793-4534-90a5-06fd9bc549e6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Press to Target",
                    "type": "Button",
                    "id": "136c860b-9254-41e3-835a-680d5d13d64d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Hold to Target (Press)",
                    "type": "Button",
                    "id": "82a2e625-d12c-4197-bf9f-602bc6e376a3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Hold to Target (Release)",
                    "type": "Button",
                    "id": "6727b048-a2c6-4fe3-83d5-6c33c263bbf3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Tongue Button Press",
                    "type": "Button",
                    "id": "1522ce41-6f87-41bb-9660-0ec8784096d9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Tongue Button Release",
                    "type": "Button",
                    "id": "ee97b943-e8d8-4bbc-95b7-5bbac7534f29",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "3a4c4bfb-6c70-49ab-b8d7-2e1809f27fe8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b2102b57-dfa1-4f41-a287-9072175d2ca9",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9f84b445-d6e2-446e-b712-728b0333e6cb",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c32b44a6-e858-4645-9103-cdf480dbeaa7",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Press to Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "12d31b8e-7941-43f3-91a6-a7778c07eee4",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Hold to Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "95fd0c94-4559-44dd-a6f5-652d14ba3e90",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6fc3065e-3412-4bad-916a-e1093927566d",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Press to Target",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "28882016-6872-4500-b6f8-2ea59279a459",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Press to Target",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ad13f534-2b7f-4560-94d2-202a053e6764",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Hold to Target (Press)",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e35e7431-16db-44fd-bf25-b5fe33c99fc3",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Hold to Target (Release)",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "253f5b13-4afb-47b1-9aa3-e12887f55f5e",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Tongue Button Press",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bc8b6ce2-c35f-4a7b-8dff-40fe6e4365e0",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Tongue Button Release",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "28094fa8-94ce-48d3-a1f5-1d704b33cb18",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu",
            "id": "a36616ec-d836-4ab4-a2fb-a549b4956c59",
            "actions": [],
            "bindings": []
        }
    ],
    "controlSchemes": []
}